Stretching issue fixed

--- a/gsusa/content/src/main/theme/custom/scss/components/_carousel.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_carousel.scss
@@ -623,3 +623,7 @@ div.carousel {
 .slick-loading .slick-list {
   background: #fff url('../images/ajax-loader.gif') center center no-repeat;
 }
+
+.lazyYT-container {
+    position: static;
+ }
